feat: rewrite Recipe / Ingredient logic to fix duplicate ingredient (close #75)